--- a/app/templates/clinic/dashboard.html
+++ b/app/templates/clinic/dashboard.html
@@ -302,7 +302,7 @@
                         <small>
                             <strong>{{ _('Instructions:') }}</strong><br>
                             • {{ _('If they already have an account, they can join immediately') }}<br>
-                            • {{ _('If they don\'t have an account, they can register and join automatically') }}
+                            • {{ _('If they do not have an account, they can register and join automatically') }}
                         </small>
                     </div>
                 </div>
