--- a/app/templates/pricing_individual.html
+++ b/app/templates/pricing_individual.html
@@ -162,7 +162,7 @@
         <div class="row justify-content-center">
             <div class="col-md-8">
                 <div class="row text-muted small">
-                    <div class="col-6">✓ HIPAA compliant</div>
+                                                <div class="col-6">⚠️ Beta - Compliance Pending</div>
                     <div class="col-6">✓ Cloud backup</div>
                     <div class="col-6">✓ Mobile access</div>
                     <div class="col-6">✓ Data export</div>
