--- a/app/templates/pricing_clinic.html
+++ b/app/templates/pricing_clinic.html
@@ -185,7 +185,7 @@
                 <div class="row">
                     <div class="col-md-3 col-6 mb-3">
                         <i class="bi bi-shield-check text-primary fs-3 d-block mb-2"></i>
-                        <strong>HIPAA Compliant</strong><br>
+                                                        <strong class="text-warning">⚠️ Beta Version - Compliance Pending</strong><br>
                         <small class="text-muted">Enterprise-grade security</small>
                     </div>
                     <div class="col-md-3 col-6 mb-3">
